--- a/src/components/reactions/Reactions.module.scss
+++ b/src/components/reactions/Reactions.module.scss
@@ -1,32 +1,83 @@
 .container {
+    position: sticky;
+    bottom: 36px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 2rem;
+    align-items: end;
+    justify-content: end;
+    gap: var(--responsive-space-s);
+    z-index: 9;
 }
 
 .button {
+    padding-right: 0;
     font-size: 1.5rem;
-    margin-bottom: 1rem;
     cursor: pointer;
-    padding: 0.5rem 1rem;
 }
 
 .list {
+    width: fit-content;
+    transition: all .3s;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    align-items: center;
     list-style: none;
-    padding: 0;
-    margin: 0;
-    overflow: hidden;
+    padding-left: 0;
+    padding-right: 1em;
+    border-radius: 2em;
+    animation-duration: 0.5s;
+    animation-name: animate-fade;
+    animation-fill-mode: backwards;
+
+    @keyframes animate-fade {
+        0% {
+            opacity: 0;
+        }
+
+        100% {
+            opacity: 1;
+        }
+    }
+}
+
+.open {}
+
+.count {
+    display: flex;
+    position: absolute;
+    left: 1.2em;
+    padding: 4px;
+    width: auto;
+    pointer-events: none;
 }
 
 .list li {
     opacity: 0;
-    transform: translateY(10px);
+    transform: translateY(-10px);
     transition: opacity 0.5s ease, transform 0.5s ease;
     transition-delay: var(--delay, 0s);
+    padding: 0;
+    margin: 0;
+}
+
+.reactionButton {
+    padding: 0;
+    aspect-ratio: 1;
+
+    &:hover,
+    &:focus,
+    &:focus-visible {
+        border: 1px solid transparent;
+        outline: 0 solid transparent;
+    }
+
+    &:hover div span {
+        transform: translateY(-4px);
+    }
+
+    span {
+        font-size: 2em;
+    }
 }
 
 .open li {
@@ -56,12 +107,16 @@
 
 /* Sur écran large : horizontal */
 @media (min-width: 700px) {
+    .container {
+        align-items: end;
+    }
+
     .list {
         flex-direction: row;
     }
 
     .list li {
-        transform: translateX(10px);
+        transform: translateX(-10px);
     }
 
     .open li {
