feat: améliorer le style et la structure du composant Tarifs

--- a/src/components/tarif/Tarifs.module.scss
+++ b/src/components/tarif/Tarifs.module.scss
@@ -17,7 +17,9 @@
         }
     }
 }
-
+.volet {
+    isolation: isolate;
+}
 .titre {
     max-width: var(--responsive-height-xl);
     line-height: .9 !important;
