--- a/src/once-ui/components/ScrollToTop.module.scss
+++ b/src/once-ui/components/ScrollToTop.module.scss
@@ -4,7 +4,8 @@
   transition: opacity 200ms ease-in-out, visibility 0ms linear 200ms;
 
   &[data-visible="true"] {
-    opacity: 1;
+    z-index: 999;
+      opacity: 1;
     visibility: visible;
     transition: opacity 200ms ease-in-out, visibility 0ms linear;
   }
