--- a/src/components/reactions/Reactions.module.scss
+++ b/src/components/reactions/Reactions.module.scss
@@ -19,10 +19,34 @@
     div {
         margin-right: -0.3em;
     }
+
+    >*:nth-child(1) {
+        transform: scale(1.5);
+    }
+
+    >*:nth-child(2) {
+        transform: scale(1.4);
+    }
+
+    >*:nth-child(3) {
+        transform: scale(1.3);
+    }
+
+    >*:nth-child(4) {
+        transform: scale(1.2);
+    }
+
+    >*:nth-child(5) {
+        transform: scale(1.1);
+    }
 }
 
 // .open {}
 
 .emoji {
     cursor: pointer;
+}
+
+.emojiCard {
+    font-size: 3em;
 }
