fix: ajuster les styles de la liste des réactions pour améliorer l'affichage

--- a/src/components/reactions/Reactions.module.scss
+++ b/src/components/reactions/Reactions.module.scss
@@ -21,9 +21,14 @@
     background-color: var(--page-background);
     width: fit-content;
     padding-right: 1em;
+    line-height: 75%;
+    flex-direction: row-reverse;
+    max-height: 2em;
+    overflow: clip;
 
     div {
         margin-right: -0.3em;
+
     }
 
     >*:nth-child(1) {
