fix: améliorer le style et la structure du composant AvisClients, ajuster la gestion des marges et des paddings

--- a/src/components/avisClients.module.scss
+++ b/src/components/avisClients.module.scss
@@ -4,3 +4,6 @@
     margin-left: calc(99svw - (var(--responsive-width-m) / -2));
     margin-right: calc(99svw - (var(--responsive-width-m) / -2));
 }
+.avisCli:last-of-type {
+   margin-right: 2vw;
+}
