--- a/src/components/reactions/Reactions.module.scss
+++ b/src/components/reactions/Reactions.module.scss
@@ -1,7 +1,7 @@
 .container {
     z-index: 10;
     position: sticky;
-    bottom: 72px;
+    bottom: 78px;
     display: flex;
     flex-direction: column;
     align-items: end;
@@ -16,14 +16,9 @@
 }
 
 .list {
-    border-radius: 1em;
     width: fit-content;
-    padding-right: 1em;
-    // line-height: 75%;
     flex-direction: row-reverse;
-    max-height: 2em;
     overflow: clip;
-
     div {
         margin-right: -0.3em;
 
@@ -57,7 +52,7 @@
 }
 
 .emojiCard {
-    font-size: 2em;
+    font-size: var(--font-size-body-l);
 }
 
 @keyframes fade {
