--- a/src/once-ui/tokens/theme.scss
+++ b/src/once-ui/tokens/theme.scss
@@ -562,3 +562,6 @@
     --brand-on-solid-strong:      var(--static-black);      
     --brand-on-solid-weak:        var(--function-brand-200);
 }
+.isolate {
+    isolation: isolate;
+}
